--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,4 @@
-//npm i -D eslint eslint-config-airbnb eslint-config-prettier eslint-plugin-import eslint-plugin-jsx-a11y eslint-plugin-prettier eslint-plugin-react eslint-plugin-react-hooks prettier
+//npm i -D eslint eslint-config-airbnb eslint-config-prettier eslint-plugin-import eslint-plugin-jsx-a11y eslint-plugin-prettier eslint-plugin-react eslint-plugin-react-hooks prettier prettier-plugin-classnames
 {
   "env": {
     "es6": true,
@@ -20,7 +20,10 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "prettier"],
+  "plugins": [
+    "react",
+    "prettier"
+  ],
   "rules": {
     "no-param-reassign": "off",
     "react/react-in-jsx-scope": "off",
@@ -32,13 +35,21 @@
     "comma-dangle": "off",
     "object-curly-newline": "off",
     "no-console": "off",
-    "arrow-parens": [2, "as-needed"],
+    "arrow-parens": [
+      2,
+      "as-needed"
+    ],
     "react/jsx-props-no-spreading": "off",
     "prefer-destructuring": "off",
     "jsx-a11y/label-has-associated-control": "off",
     "no-unreachable": "off",
     "react/button-has-type": "off",
-    "import/no-extraneous-dependencies": ["error", { "devDependencies": true }],
+    "import/no-extraneous-dependencies": [
+      "error",
+      {
+        "devDependencies": true
+      }
+    ],
     "default-param-last": "off",
     "prettier/prettier": [
       "error",
@@ -50,14 +61,19 @@
     "react/jsx-filename-extension": [
       "error",
       {
-        "extensions": [".js", ".jsx"]
+        "extensions": [
+          ".js",
+          ".jsx"
+        ]
       }
     ]
   },
   "settings": {
     "import/resolver": {
       "node": {
-        "paths": ["."]
+        "paths": [
+          "."
+        ]
       }
     }
   }
